# home-library

./: .env.example  .gitignore  compose.yml  docker-compose.yml  run.bat  run.sh  set_volume_from_archive.sh
backend/: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  localhost-cert.pem  localhost-key.pem  pom.xml
backend/migrations/2022-07-03-123945_create_users/: up.sql
backend/src/: db.rs  handlers.rs  main.rs  models.rs  schema.rs  search_engine.rs
backend/src/main/kotlin/com/bromles/backend/: BackendApplication.kt
backend/src/main/kotlin/com/bromles/backend/config/: DevDataSourceConfig.kt  JwtGrantedAuthorityConverter.kt  ObjectMapperConfig.kt  SwaggerConfig.kt  WebSecurityConfig.kt
backend/src/main/kotlin/com/bromles/backend/controller/: BookController.kt  CategoryController.kt  TagController.kt
backend/src/main/kotlin/com/bromles/backend/dto/: BookDto.kt  BookFileDto.kt  BookRequestDto.kt  BookResponseDto.kt  CategoryDto.kt  TagDto.kt  UpdateBookRequestDto.kt
backend/src/main/kotlin/com/bromles/backend/exception/: ExceptionHandlerController.kt  ForbiddenException.kt  NotFoundException.kt
backend/src/main/kotlin/com/bromles/backend/listener/: BaseEntityListener.kt
backend/src/main/kotlin/com/bromles/backend/mapper/: BookMapper.kt  CategoryMapper.kt  TagMapper.kt
backend/src/main/resources/: application.yml
backend/src/main/resources/db/changelog/: changelog.yaml
backend/src/test/kotlin/com/bromles/backend/: BackendApplicationTests.kt
backend/src/test/resources/: application.yml
backend/src/users/: mod.rs  models.rs  routes.rs
(+202 files in other folders)
