[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version = "1.0.136", features = ["derive"]}
meilisearch-sdk = "0.15.0"
diesel = { version = "1.4.8", features = [ "postgres","uuidv07", "r2d2", "chrono" ] }
derive_more = "0.99.17"
r2d2 = "0.8.9"
serde_json = "1.0.79"
dotenv = "0.15.0"
chrono = { version = "0.4.10", features = ["serde"] }
