[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
oauth2 = "4.2.0"
serde = { version = "1.0.137", features = ["derive"] }
meilisearch-sdk = "0.17.0"
diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
derive_more = "0.99.17"
r2d2 = "0.8.10"
serde_json = "1.0.82"
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
num_cpus = "1.13.0"
reqwest = { version = "0.11.11", features = ["json", "gzip", "brotli", "deflate"] }